[tool.poetry]
name = "airbnb-django-react"
version = "0.1.0"
description = ""
authors = ["nature1339 <76989460+nature1339@users.noreply.github.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
django = "^5.1.3"
pillow = "^11.0.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
